@@ -1,3 +1,4 @@
+* Allow to export model and record name of Reference fields
 * Re-position buttons on Binary/Image widget
 * Set focus on first visible input when modal is shown
 * Improve treeview headers
